--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "reka-ui": "^2.6.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
+    "three": "^0.181.2",
     "vee-validate": "^4.15.1",
     "vue": "^3.5.24",
     "vue-router": "^4.6.3",
@@ -28,6 +29,7 @@
     "@iconify-json/radix-icons": "^1.2.5",
     "@iconify/vue": "^5.0.0",
     "@types/node": "^24.10.1",
+    "@types/three": "^0.181.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
     "tw-animate-css": "^1.4.0",
@@ -38,6 +40,9 @@
   "pnpm": {
     "overrides": {
       "vite": "npm:rolldown-vite@7.2.5"
-    }
+    },
+    "ignoredBuiltDependencies": [
+      "vue-demi"
+    ]
   }
 }
