--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.554.0",
+    "pinia": "^3.0.4",
     "reka-ui": "^2.6.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
@@ -23,6 +24,7 @@
     "vue": "^3.5.24",
     "vue-router": "^4.6.3",
     "vue-sonner": "^2.0.9",
+    "wheelloop": "^0.1.5",
     "zod": "^4.1.13"
   },
   "devDependencies": {
