feat(strava): 添加锐评生成和发布功能
移除 wheelloop 依赖，直接集成 OpenAI SDK 实现活动锐评功能
在登录页面添加 OpenAI 配置表单，支持自定义模型、Base URL 和 API Key
在活动列表页面添加生成锐评按钮，调用 OpenAI API 生成幽默点评
添加发布功能，将锐评内容添加到 Strava 活动描述中
更新本地存储结构，保存用户的 OpenAI 配置设置

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,6 +3,8 @@
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "types": ["vite/client"],
+    "target": "ES2020",
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
 
     /* Linting */
     "strict": true,
@@ -13,7 +15,8 @@
     "noUncheckedSideEffectImports": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@dqbd/tiktoken": ["./src/shims/tiktoken"]
     }
   },
   "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"]
