--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "vue": "^3.5.24",
     "vue-router": "^4.6.3",
     "vue-sonner": "^2.0.9",
-    "wheelloop": "^0.1.5",
-    "zod": "^4.1.13"
+    "zod": "^4.1.13",
+    "openai": "^4.83.0"
   },
   "devDependencies": {
     "@iconify-json/radix-icons": "^1.2.5",
